Bug 252681 mozISpellCheckingEngine check method faulting on misspelled words r=mvl sr=dmose